# trustchain

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  test_vectors.json
.github/workflows/: ci.yml  publish.yml  release.yml  wasm.yml
.serena/: project.yml
.serena/memories/: project_overview.md  suggested_commands.md  task_completion_checklist.md
deploy/: deploy.sh  docker-node.toml  seed-node.toml
docs/design/: trust-computation-optimizations.md
trustchain-core/: Cargo.toml
trustchain-core/benches/: crypto.rs  helpers.rs  integrity.rs  meritrank.rs  netflow.rs  protocol.rs  sqlite.rs  trust.rs
trustchain-core/src/: behavioral.rs  blockstore.rs  chain.rs  collusion.rs  consensus.rs  correlation.rs  crawler.rs  delegation.rs  error.rs  forgiveness.rs  halfblock.rs  identity.rs  lib.rs  meritrank.rs  netflow.rs  protocol.rs  sanctions.rs  schema.rs  sealed_rating.rs  thresholds.rs  tiers.rs  trust.rs  types.rs
trustchain-core/tests/: cross_validation.rs  fuzz_proptest.rs  paper_compliance.rs  proptest_properties.rs  stress.rs  stress2.rs  stress3.rs  stress4.rs  system_tests.rs
trustchain-node/: Cargo.toml
trustchain-node/src/: config.rs  main.rs  node.rs
trustchain-node/tests/: integration_network.rs
trustchain-transport/: Cargo.toml
trustchain-transport/src/: dashboard.html  discover.rs  discovery.rs  grpc.rs  http.rs  lib.rs  mcp.rs  message.rs  pool.rs  proxy.rs  quic.rs  stun.rs  tls.rs
trustchain-transport/src/ipv8/: community.rs  mod.rs  packet.rs  payload.rs  udp.rs
trustchain-wasm/: Cargo.toml  package.json
trustchain-wasm/src/: lib.rs
