[package]
name = "trustchain-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TrustChain protocol core — identity, blocks, storage, trust computation"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[dependencies]
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true, optional = true }
petgraph = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "crypto"
harness = false

[[bench]]
name = "protocol"
harness = false

[[bench]]
name = "trust"
harness = false

[[bench]]
name = "netflow"
harness = false

[[bench]]
name = "integrity"
harness = false

[[bench]]
name = "sqlite"
harness = false
required-features = ["sqlite"]
