[package]
name = "trustchain-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TrustChain networking — QUIC, gRPC, HTTP, peer discovery"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[features]
default = []
mcp = ["dep:rmcp", "dep:schemars"]
ipv8 = ["dep:sha1"]

[dependencies]
trustchain-core = { workspace = true, features = ["sqlite", "meritrank"] }
quinn = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
sha1 = { workspace = true, optional = true }
rmcp = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }

[dev-dependencies]
tempfile = "3"
