[package]
name = "trustchain-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "TrustChain WASM bindings for browser nodes"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
trustchain-core = { workspace = true, default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
hex = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
